--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -22,12 +22,15 @@
             box-sizing: border-box; /* 패딩을 포함하여 크기 계산 */
         }
         .video-card {
+            flex: 0 0 auto;
             max-height: 100%; /* 최대 높이를 100%로 설정 */
             object-fit: cover;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 그림자 효과 추가 */
             border-radius: 10px;
             /* background-color: #000;  */
             height: 100%;
+            width: 50%;
+            /* overflow-y: scroll; */
         }
         .card-container {
             display: flex;
@@ -40,17 +43,17 @@
             max-height: 100%; /* 전체 높이를 가득 채우도록 설정 */
         }
         .enver-card {
-          flex: 1;
+          flex: 2;
           height: 120px; /* 카드 높이를 정사각형으로 설정 */
           perspective: 1000px; /* 3D 효과를 위한 값 */
           cursor: pointer; /* 마우스 커서를 포인터로 변경하여 클릭 가능함을 나타냄 */
           position: relative; /* 영상을 겹쳐서 표시하기 위해 상대 위치 설정 */
           /* overflow: hidden; */
           border-radius: 10px; /* 카드 모서리를 둥글게 만듦 */
-          margin-bottom: 1rem;
+          margin-bottom: 0.9rem;
           padding: 0 0.5rem 0.5rem 0.5rem;
           --bs-card-border-color: none;
-          
+          /* min-width: 200px !important; */
         }
         .card-inner {
           position: relative;
@@ -86,7 +89,7 @@
           transform: rotateY(180deg);
         }
         .video-item {
-            /* width: 50%; */
+            width: 100%;
             height: 50%;
             padding: 0 0.5rem 0 0.5rem ;
         }
@@ -142,7 +145,10 @@
                 box-sizing: border-box; /* 패딩을 포함하여 크기 계산 */
             }
             .srcn {
-                max-height: calc(100vh - 3.25rem);
+                max-height: calc(100vh - 5.25rem);
+            }
+            .chart {
+                height: 35vh;
             }
         }
         @media screen and (max-width: 767px) {
@@ -155,16 +161,13 @@
             .video-item {
                 height: auto;
             }
-            .chart {
-                height: 35vh;
-            }
         }
         @media screen and (max-width: 600px) {
             .video-card {
-                max-height: calc(20vh + 20vh + 6rem);
+                max-height: calc(30vh + 20vh + 6rem);
             }
             .chart {
-                height: 20vh;
+                height: 25vh;
             }
         }
       </style>
@@ -211,11 +214,13 @@
                     <span class="fas-3 bi_house" style="color: aliceblue;">아쿠팜</span>
                 </a>
                 <div class="nav_list">
-                    <a href="#" onclick="dashboardOpen()" class="nav_link active">
+                    <a href="#" class="nav_link active" data-bs-toggle="collapse" data-bs-target="#pages" aria-expanded="false" aria-controls="pages">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">대시보드</span>
                     </a>
-                    <a href="/chart" class="nav_link">
+                    <ul id="pages" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                    </ul>
+                    <a href="#" class="nav_link" id="chartlink" onclick="openChart()">
                         <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
                         <span class="nav_name">차트</span>
                     </a>
@@ -243,28 +248,26 @@
             <!-- 비디오 카드 -->
             <div class="video-card" style="margin-right: 1rem;">
                 <img class="video-item" src="imgs/sample.png" style="border-radius: 10px; margin-bottom: 1rem;">
-                <div class="">
-                    <!-- <canvas id="data-chart" width="100%"></canvas> -->
-                    <div class="video-item" style="padding-bottom: 0.5rem;">
-                        <!-- /.card-header -->
-                        <div class="tab-content">
-                            <ul class="nav nav-pills" style="float: right;">
-                                <li class="nav-item"> 
-                                    <a class="nav-link active" href="#" data-bs-target="#temp_chart" data-bs-toggle="tab" style="padding: 5px;">온도/습도</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#" data-bs-target="#hum_chart" data-bs-toggle="tab" style="padding: 5px;">환경정보</a>
-                                </li>
-                            </ul>
-                            <div class="chart tab-pane active" id="temp_chart">
-                                <canvas id="data-chart"></canvas>
-                            </div>
-                            <div class="chart tab-pane" id="hum_chart">
-                                <canvas id="data-chart2"></canvas>
-                            </div>
+                <!-- <canvas id="data-chart" width="100%"></canvas> -->
+                <div class="video-item" style="padding-bottom: 0.5rem;">
+                    <!-- /.card-header -->
+                    <div class="tab-content">
+                        <ul class="nav nav-pills" style="float: right;">
+                            <li class="nav-item"> 
+                                <a class="nav-link active" href="#" data-bs-target="#temp_chart" data-bs-toggle="tab" style="padding: 5px;">온도/습도</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" data-bs-target="#hum_chart" data-bs-toggle="tab" style="padding: 5px;">환경정보</a>
+                            </li>
+                        </ul>
+                        <div class="chart tab-pane active" id="temp_chart">
+                            <canvas id="data-chart"></canvas>
                         </div>
-                        <!-- /.card-body -->
+                        <div class="chart tab-pane" id="hum_chart">
+                            <canvas id="data-chart2"></canvas>
+                        </div>
                     </div>
+                    <!-- /.card-body -->
                 </div>
             </div>
 
@@ -351,39 +354,48 @@
                         </div>
                     </div>
                 </div>
-                <div class="enver-card" onclick="this.classList.toggle('flipped')" style="width: 100%;">
-                    <div class="card-inner">
-                        <div class="card-face card-front">
-                            <h3>Front 6</h3>
-                            <p>Click to flip</p>
-                        </div>
-                        <div class="card-face card-back">
-                            <h3>Back 6</h3>
-                            <p>Click again to flip back</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="enver-card" onclick="this.classList.toggle('flipped')" style="width: 100%;">
-                    <div class="card-inner">
-                        <div class="card-face card-front">
-                            <h3>Front 6</h3>
-                            <p>Click to flip</p>
-                        </div>
-                        <div class="card-face card-back">
-                            <h3>Back 6</h3>
-                            <p>Click again to flip back</p>
+
+                <div class="card-row">
+                    <div class="enver-card" onclick="this.classList.toggle('flipped')" style="width: 100%;">
+                        <div class="card-inner">
+                            <div class="card-face card-front">
+                                <h3>Front 6</h3>
+                                <p>Click to flip</p>
+                            </div>
+                            <div class="card-face card-back">
+                                <h3>Back 6</h3>
+                                <p>Click again to flip back</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="enver-card" onclick="this.classList.toggle('flipped')" style="margin-bottom: 0; width: 100%;">
-                    <div class="card-inner">
-                        <div class="card-face card-front">
-                            <h3>Front 6</h3>
-                            <p>Click to flip</p>
+
+                <div class="card-row">
+                    <div class="enver-card" onclick="this.classList.toggle('flipped')" style="width: 100%;">
+                        <div class="card-inner">
+                            <div class="card-face card-front">
+                                <h3>Front 6</h3>
+                                <p>Click to flip</p>
+                            </div>
+                            <div class="card-face card-back">
+                                <h3>Back 6</h3>
+                                <p>Click again to flip back</p>
+                            </div>
                         </div>
-                        <div class="card-face card-back">
-                            <h3>Back 6</h3>
-                            <p>Click again to flip back</p>
+                    </div>
+                </div>
+
+                <div class="card-row">
+                    <div class="enver-card" onclick="this.classList.toggle('flipped')" style="margin-bottom: 0; width: 100%;">
+                        <div class="card-inner">
+                            <div class="card-face card-front">
+                                <h3>Front 6</h3>
+                                <p>Click to flip</p>
+                            </div>
+                            <div class="card-face card-back">
+                                <h3>Back 6</h3>
+                                <p>Click again to flip back</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -396,6 +408,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
+    <script src="js/draw_devices.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
     <script>
         const ctx = $("#data-chart");
@@ -403,7 +416,7 @@
         const loc = decodeURI(location.search.substr(location.search.indexOf("?") + 1)).split(",");
 
         $(document).ready(function() {
-            
+            $("#chartlink").on("click", function() { window.location = (`/chart?${name=loc[0]},${device=loc[1]}`) })
             $("#dashboard_name").text(loc[0])
             new Chart(ctx, {
                 type: 'line',
@@ -417,6 +430,7 @@
                 options: {
                     maintainAspectRatio: false,
                     responsive: true,
+                    responsiveAnimationDuration: 1000,
                     legend: {
                         position: 'top',
                     }, 
@@ -449,6 +463,7 @@
                 options: {
                     maintainAspectRatio: false,
                     responsive: true,
+                    responsiveAnimationDuration: 1000,
                     legend: {
                         position: 'top',
                     }, 
