--- a/views/index.html
+++ b/views/index.html
@@ -61,10 +61,6 @@
                             <i class='bx bx-devices nav_icon'></i> <span class="nav_name">가입승인</span>
                         </a> -->
                     </ul>
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
-                        <span class="nav_name">차트</span>
-                    </a>
                     <a href="/student_manage" class="nav_link" id="stumanag">
                         <i class='bx bx-user nav_icon'></i> <span class="nav_name">학생관리</span>
                     </a>
@@ -104,6 +100,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/sidebar.js"></script>
     <script src="js/memberAuth.js"></script>
+    <script src="js/draw_devices.js"></script>
     <script>
         $(document).ready(function() {
             $.ajax({
@@ -112,23 +109,16 @@
                 data: { id: id },
                 success:function(data) {
                     let html = '';
-                    let deviceHtml = '';
                     $.each(data, (i, val) => {
                         html += `<div class="card" style="margin-bottom: 1rem;">
-                                    <a href="#" onclick="window.open('/dashboard?${name=val.name},${device=val.device_id}')" style="color: black;">
+                                    <a href="#" onclick="window.location = ('/dashboard?${name=val.name},${device=val.device_id}')" style="color: black;">
                                         <div class="card-header">기기명: ${val.name}</div>
                                         <div class="card-body">
                                             <span id="device_date_${i}">가입일: ${val.time}</span>
                                         </div>
                                     </a>
                                 </div>`
-                        deviceHtml += `<a href="/dashboard?${name=val.name},${device=val.device_id}" class="nav_link">
-                                        <i class='bx bx-devices nav_icon'></i> <span class="nav_name">${val.name}</span>
-                                    </a>`
-                        if (data.length - 1 == i) {
-                            $("#device_card").append(html);
-                            $("#pages").append(deviceHtml);
-                        }
+                        if (data.length - 1 == i) $("#device_card").append(html);
                     })
                 }
             })
